build_output_clean.txt

> Configure project :
Fabric Loom: 1.15.3

> Task :clean
> Task :compileJava
> Task :processResources
> Task :classes

> Task :compileClientJava
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:201: error: cannot find symbol
						context.getSource().sendFeedback(createToggle("Sign Calculator:", BomboConfig.signCalculator));
						                                                                             ^
  symbol:   variable signCalculator
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:202: error: cannot find symbol
						context.getSource().sendFeedback(createToggle("Chest Clicker:", BomboConfig.chestClicker));
						                                                                           ^
  symbol:   variable chestClicker
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:203: error: cannot find symbol
						context.getSource().sendFeedback(createToggle("Auto Clicker:", BomboConfig.autoClicker));
						                                                                          ^
  symbol:   variable autoClicker
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:204: error: cannot find symbol
						context.getSource().sendFeedback(createToggle("SBE Commands:", BomboConfig.sbeCommands));
						                                                                          ^
  symbol:   variable sbeCommands
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:206: error: cannot find symbol
								.sendFeedback(createToggle("Left Click Etherwarp:", BomboConfig.leftClickEtherwarp));
								                                                               ^
  symbol:   variable leftClickEtherwarp
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:208: error: cannot find symbol
								.sendFeedback(createToggle("Auto Experiments:", BomboConfig.autoExperiments));
								                                                           ^
  symbol:   variable autoExperiments
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:209: error: cannot find symbol
						context.getSource().sendFeedback(createToggle("Sphinx Macro:", BomboConfig.sphinxMacro));
						                                                                          ^
  symbol:   variable sphinxMacro
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:214: error: cannot find symbol
										.literal("§eDebug Mode: " + (BomboConfig.debugMode ? "§a[ON]" : "§c[OFF]"))
										                                        ^
  symbol:   variable debugMode
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:221: error: cannot find symbol
										.literal("§eExperiment Click Delay: §b" + BomboConfig.experimentClickDelay
										                                                     ^
  symbol:   variable experimentClickDelay
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:229: error: cannot find symbol
										+ (BomboConfig.experimentAutoClose ? "§a[ON]" : "§c[OFF]"))
										              ^
  symbol:   variable experimentAutoClose
  location: class BomboConfig
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:236: error: cannot find symbol
										.literal("§eExperiment Serum Count: §b" + BomboConfig.experimentSerumCount
										                                                     ^
  symbol:   variable experimentSerumCount
  location: class BomboConfig
Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BazaarUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
11 errors

> Task :compileClientJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BazaarUtils.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:201: error: cannot find symbol
  						context.getSource().sendFeedback(createToggle("Sign Calculator:", BomboConfig.signCalculator));
  						                                                                             ^
    symbol:   variable signCalculator
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:202: error: cannot find symbol
  						context.getSource().sendFeedback(createToggle("Chest Clicker:", BomboConfig.chestClicker));
  						                                                                           ^
    symbol:   variable chestClicker
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:203: error: cannot find symbol
  						context.getSource().sendFeedback(createToggle("Auto Clicker:", BomboConfig.autoClicker));
  						                                                                          ^
    symbol:   variable autoClicker
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:204: error: cannot find symbol
  						context.getSource().sendFeedback(createToggle("SBE Commands:", BomboConfig.sbeCommands));
  						                                                                          ^
    symbol:   variable sbeCommands
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:206: error: cannot find symbol
  								.sendFeedback(createToggle("Left Click Etherwarp:", BomboConfig.leftClickEtherwarp));
  								                                                               ^
    symbol:   variable leftClickEtherwarp
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:208: error: cannot find symbol
  								.sendFeedback(createToggle("Auto Experiments:", BomboConfig.autoExperiments));
  								                                                           ^
    symbol:   variable autoExperiments
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:209: error: cannot find symbol
  						context.getSource().sendFeedback(createToggle("Sphinx Macro:", BomboConfig.sphinxMacro));
  						                                                                          ^
    symbol:   variable sphinxMacro
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:214: error: cannot find symbol
  										.literal("§eDebug Mode: " + (BomboConfig.debugMode ? "§a[ON]" : "§c[OFF]"))
  										                                        ^
    symbol:   variable debugMode
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:221: error: cannot find symbol
  										.literal("§eExperiment Click Delay: §b" + BomboConfig.experimentClickDelay
  										                                                     ^
    symbol:   variable experimentClickDelay
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:229: error: cannot find symbol
  										+ (BomboConfig.experimentAutoClose ? "§a[ON]" : "§c[OFF]"))
  										              ^
    symbol:   variable experimentAutoClose
    location: class BomboConfig
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:236: error: cannot find symbol
  										.literal("§eExperiment Serum Count: §b" + BomboConfig.experimentSerumCount
  										                                                     ^
    symbol:   variable experimentSerumCount
    location: class BomboConfig
  11 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
4 actionable tasks: 4 executed
